# pokemon_etl

./: .gitignore  LEARNING_NOTES.md  README.md  Untitled-1.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
config_file/: config.json
dags/: pokemon_dags.py
data/raw/pokemon/: pokemon_page_17.json  pokemon_page_18.json  pokemon_page_19.json  pokemon_page_20.json  pokemon_page_25.json  pokemon_page_26.json  pokemon_page_27.json
data/raw/species/: generation-vi.json  generation-vii.json  generation-viii.json
notebooks/: prueba.ipynb
src/pokemon_etl/: __init__.py  config_manager.py  extract.py  load.py  transform.py
